# modelweaver

./: .gitignore  .npmignore  1n  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  modelweaver.example.yaml  package-lock.json  package.json  specs.md  test-transformer.mjs  tsconfig.json  tsup.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: 2026-04-20-openai-upstream-adapter-design.md  2026-04-20-openai-upstream-adapter-plan.md  debug-session-glm-openai-fix.md  prompt-caching-spec.md
gui/: Cargo.toml  build.rs  gen-icons.cjs  package-lock.json  package.json  tauri.conf.json
gui/capabilities/: default.json
gui/frontend/: app.js  index.html  styles.css
gui/icons/: icon.icns
gui/src/: lib.rs  main.rs
src/: adaptive-timeout.ts  circuit-breaker.ts  classifier.ts  concurrency.ts  config.ts  daemon.ts  entry-path.ts  gui-launcher.ts  health-probe.ts  health-score.ts  hedging.ts  index.ts  init.ts  launchd.ts  logger.ts  metrics.ts  monitor.ts  pool.ts  presets.ts  proxy.ts  router.ts  server.ts  service-darwin.ts  service-linux.ts  service-win32.ts  service.ts  session-pool.ts  settings.ts  stream-buffer.ts  types.ts  ws.ts
tests/: adaptive-timeout.test.ts  bench-streaming-hotpath.test.ts  circuit-breaker.test.ts  classifier.test.ts  compress-old-turns.test.ts  concurrency.test.ts  config.test.ts  daemon.test.ts  health-probe.test.ts  health-score.test.ts  hedging.test.ts  init-validate.test.ts  init.test.ts  logger.test.ts  metrics.test.ts  pool.test.ts  proxy.test.ts  router.test.ts  server.test.ts  session-pool.test.ts  (+6 more)
(+680 files in other folders)
